--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".user.presentation.activity.MatrixActivity"
+            android:name=".chat.ChatMainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".user.presentation.activity.MatrixActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".user.presentation.activity.AddUserActivity"
@@ -33,8 +39,8 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".user.presentation.activity.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
-
         </activity>
     </application>
 
